--- a/css/lucid-design.css
+++ b/css/lucid-design.css
@@ -6,7 +6,7 @@
     position: absolute;
     width: 100vw;
     height: 100vh;
-    background-image: url('/assets/background-lucid.svg');
+    background-image: url('assets/background-lucid.svg');
     background-repeat: no-repeat;
     background-size: 100vmax;
 }
