--- a/css/product-navbar.css
+++ b/css/product-navbar.css
@@ -95,3 +95,10 @@ p{
 .product_nav .product_nav_elements p:hover {
     color: rgb(135, 135, 135);
 }
+
+.iconcloud{
+    padding-top: 1.6%;
+}
+.iconcnc{
+    padding-top: 1.6%;
+}
